@@ -1,55 +1,55 @@
 <!DOCTYPE rkpluginmap >
 <document 
-	base_prefix=""
-	namespace="CohensKappa"
-	id="CohensKappa_rkward"
-	po_id="CohensKappa_rkward"
-	priority="medium"
+  base_prefix=""
+  namespace="CohensKappa"
+  id="CohensKappa_rkward"
+  po_id="CohensKappa_rkward"
+  priority="medium"
 >
-	<!-- 
-		this code was generated using the rkwarddev package.
-			perhaps don't make changes here, but in the rkwarddev script instead! 
-	-->
-	<dependencies rkward_min_version="0.6.0">
-		<package name="psych" />
-	</dependencies>
-	<about 
-		name="rk.CohenKappa"
-		shortinfo="RKWard GUI to calculate Cohen's Kappa"
-		longinfo="RKWard GUI to calculate Cohen's Kappa, i.e., the agreement of two raters (using the psych package)"
-		version="0.01-7"
-		releasedate="2015-03-14"
-		url="https://rkward.kde.org"
-		license="GPL (&gt;= 3)"
-	>
-		<author 
-			given="Meik"
-			family="Michalke"
-			email="meik.michalke@hhu.de"
-			role="aut, cre"
-		 />
-	</about>
-	<require 
-		map="rkward::menu"
-	 />
-	<require 
-		map="rkward::embedded"
-	 />
-	<components>
-		<component 
-			id="cmp_CohensKappaCohensKappa"
-			label="Cohen's Kappa"
-			type="standard"
-			file="plugins/CohensKappa.xml"
-		>
-		</component>
-	</components>
-	<hierarchy>
-		<menu 
-			id="analysis"
-			label="Analysis"
-		>
-			<entry component="cmp_CohensKappaCohensKappa" />
-		</menu>
-	</hierarchy>
+  <!-- 
+    this code was generated using the rkwarddev package.
+        perhaps don't make changes here, but in the rkwarddev script instead! 
+  -->
+  <dependencies rkward_min_version="0.6.0">
+    <package name="psych" />
+  </dependencies>
+  <about 
+    name="rk.CohenKappa"
+    shortinfo="RKWard GUI to calculate Cohen's Kappa"
+    longinfo="RKWard GUI to calculate Cohen's Kappa, i.e., the agreement of two raters (using the psych package)"
+    version="0.01-8"
+    releasedate="2015-11-11"
+    url="https://rkward.kde.org"
+    license="GPL (&gt;= 3)"
+  >
+    <author 
+      given="Meik"
+      family="Michalke"
+      email="meik.michalke@hhu.de"
+      role="aut, cre"
+     />
+  </about>
+  <require 
+    map="rkward::menu"
+   />
+  <require 
+    map="rkward::embedded"
+   />
+  <components>
+    <component 
+      id="cmp_CohensKappaCohensKappa"
+      label="Cohen's Kappa"
+      type="standard"
+      file="plugins/CohensKappa.xml"
+    >
+    </component>
+  </components>
+  <hierarchy>
+    <menu 
+      id="analysis"
+      label="Analysis"
+    >
+      <entry component="cmp_CohensKappaCohensKappa" />
+    </menu>
+  </hierarchy>
 </document>
